Bug 52250 - [softpipe] SIGSEGV sp_tex_sample.c:1536
Summary: [softpipe] SIGSEGV sp_tex_sample.c:1536
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-19 00:28 UTC by Vinson Lee
Modified: 2012-07-19 19:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-07-19 00:28:19 UTC
mesa: 768be75c44a5ce2d11306ad5eb838f0e6a614c19 (master)

Run piglit fbo-cubemap on softpipe.

$ ./bin/fbo-cubemap -auto
Mesa warning: failed to remap index 173
Segmentation fault (core dumped)


(gdb) bt
#0  0x00007fd33e3fab6a in mip_filter_nearest (tgsi_sampler=0x17e8340, s=0x7fff910ce8d0, t=0x7fff910ce8e0, p=0x0, c0=<optimized out>, control=<optimized out>, rgba=0x7fff910ce980)
    at sp_tex_sample.c:1536
#1  0x00007fd33e3f6a13 in sample_cube (tgsi_sampler=<optimized out>, s=<optimized out>, t=<optimized out>, p=<optimized out>, c0=<optimized out>, control=<optimized out>, 
    rgba=0x7fff910ce980) at sp_tex_sample.c:2160
#2  0x00007fd33e5f170b in fetch_texel (a=0x7fff910ce970, b=0x7fff910ce960, g=0x7fff910ce950, r=0x7fff910ce940, control=tgsi_sampler_lod_bias, c0=0x7fd33e7895b0, p=0x7fff910ce960, 
    t=0x7fff910ce950, s=0x7fff910ce940, sampler=<optimized out>) at tgsi/tgsi_exec.c:1731
#3  exec_tex (mach=0x1694cd0, inst=0x1828ef0, modifier=<optimized out>) at tgsi/tgsi_exec.c:1886
#4  0x00007fd33e5f496a in exec_instruction (mach=0x1694cd0, inst=0x1828ef0, pc=0x7fff910ceecc) at tgsi/tgsi_exec.c:3686
#5  0x00007fd33e5f7848 in tgsi_exec_machine_run (mach=0x1694cd0) at tgsi/tgsi_exec.c:4288
#6  0x00007fd33e401728 in exec_run (var=0x18aa420, machine=0x1694cd0, quad=0x16e0c30) at sp_fs_exec.c:133
#7  0x00007fd33e3ebd3a in shade_quad (quad=<optimized out>, qs=<optimized out>) at sp_quad_fs.c:78
#8  shade_quads (qs=0x1605fe0, quads=0x16e30b0, nr=1) at sp_quad_fs.c:131
#9  0x00007fd33e3f0711 in flush_spans (setup=0x16e0bb0) at sp_setup.c:250
#10 0x00007fd33e3f0c41 in subtriangle (setup=0x16e0bb0, eleft=0x16e0bd8, eright=0x16e0c08, lines=32) at sp_setup.c:759
#11 0x00007fd33e3f15ff in sp_setup_tri (setup=<optimized out>, v0=<optimized out>, v1=<optimized out>, v2=<optimized out>) at sp_setup.c:854
#12 0x00007fd33e3e86b9 in sp_vbuf_draw_arrays (vbr=<optimized out>, start=<optimized out>, nr=4) at sp_prim_vbuf.c:473
#13 0x00007fd33e663934 in draw_pt_emit_linear (emit=<optimized out>, vert_info=<optimized out>, prim_info=0x7fff910cf2d0) at draw/draw_pt_emit.c:255
#14 0x00007fd33e5d9a28 in emit (prim_info=0x7fff910cf2d0, vert_info=0x7fff910cf240, emit=<optimized out>) at draw/draw_pt_fetch_shade_pipeline.c:169
#15 fetch_pipeline_generic (middle=0x16b3800, fetch_info=0x0, prim_info=0x7fff910cf2d0) at draw/draw_pt_fetch_shade_pipeline.c:287
#16 0x00007fd33e5d9b64 in fetch_pipeline_linear_run (middle=<optimized out>, start=<optimized out>, count=4, prim_flags=<optimized out>) at draw/draw_pt_fetch_shade_pipeline.c:346
#17 0x00007fd33e5dd504 in vsplit_run_linear (frontend=0x16b0c00, start=0, count=4) at draw/draw_split_tmp.h:61
#18 0x00007fd33e5d7f08 in draw_pt_arrays (draw=0x16a9cc0, prim=7, start=0, count=4) at draw/draw_pt.c:142
#19 0x00007fd33e5d82bd in draw_vbo (draw=0x16a9cc0, info=0x7fff910cf490) at draw/draw_pt.c:526
#20 0x00007fd33e3e8051 in softpipe_draw_vbo (pipe=0x15da060, info=0x7fff910cf490) at sp_draw_arrays.c:107
#21 0x00007fd33e4ab2f7 in st_draw_vbo (ctx=0x16e6480, prims=0x175d84c, nr_prims=1, ib=0x0, index_bounds_valid=<optimized out>, min_index=0, max_index=3, tfb_vertcount=0x0)
    at ../../src/mesa/state_tracker/st_draw.c:265
#22 0x00007fd33e583095 in vbo_exec_vtx_flush (exec=0x175cfb8, keepUnmapped=1 '\001') at ../../src/mesa/vbo/vbo_exec_draw.c:409
#23 0x00007fd33e576c7c in vbo_exec_FlushVertices_internal (exec=0x175cfb8, unmap=<optimized out>) at ../../src/mesa/vbo/vbo_exec_api.c:539
#24 0x00007fd33e5801c8 in vbo_exec_FlushVertices (ctx=0x16e6480, flags=<optimized out>) at ../../src/mesa/vbo/vbo_exec_api.c:1296
#25 0x00007fd33e54bfde in enable_texture (ctx=0x16e6480, state=<optimized out>, texBit=<optimized out>) at ../../src/mesa/main/enable.c:248
#26 0x00007fd33e54d68e in _mesa_set_enable (ctx=0x16e6480, cap=34067, state=0 '\000') at ../../src/mesa/main/enable.c:663
#27 0x00007fd341c8fa81 in stub_glDisable (cap=34067) at piglit/tests/util/generated_dispatch.c:4933
#28 0x000000000040189f in draw_face (x=1, y=1, dim=32, face=0) at piglit/tests/fbo/fbo-cubemap.c:152
#29 0x0000000000401959 in piglit_display () at piglit/tests/fbo/fbo-cubemap.c:178
#30 0x00007fd341c8329d in display () at piglit/tests/util/piglit-framework-glut.c:53
#31 0x00007fd341f5e220 in fghRedrawWindow (window=0x15d5e60) at freeglut_main.c:210
#32 fghcbDisplayWindow (window=0x15d5e60, enumerator=0x7fff910cf760) at freeglut_main.c:227
#33 0x00007fd341f61939 in fgEnumWindows (enumCallback=0x7fd341f5e120 <fghcbDisplayWindow>, enumerator=0x7fff910cf760) at freeglut_structure.c:394
#34 0x00007fd341f5e65a in fghDisplayAll () at freeglut_main.c:249
#35 glutMainLoopEvent () at freeglut_main.c:1450
#36 0x00007fd341f5ef65 in glutMainLoop () at freeglut_main.c:1498
#37 0x00007fd341c8343f in piglit_framework_glut_run (info=0x7fff910cfa00) at piglit/tests/util/piglit-framework-glut.c:139
#38 0x00007fd341c82e29 in piglit_gl_test_run (argc=1, argv=0x7fff910cfb08, info=0x7fff910cfa00) at piglit/tests/util/piglit-framework.c:138
#39 0x00000000004013d9 in main (argc=2, argv=0x7fff910cfb08) at piglit/tests/fbo/fbo-cubemap.c:39
(gdb) frame 0
#0  0x00007fd33e3fab6a in mip_filter_nearest (tgsi_sampler=0x17e8340, s=0x7fff910ce8d0, t=0x7fff910ce8e0, p=0x0, c0=<optimized out>, control=<optimized out>, rgba=0x7fff910ce980)
    at sp_tex_sample.c:1536
1536	         samp->min_img_filter(tgsi_sampler, s[j], t[j], p[j], level, samp->faces[j], tgsi_sampler_lod_bias, &rgba[0][j]);
(gdb) print p
$1 = (const float *) 0x0
Comment 1 Vinson Lee 2012-07-19 01:31:34 UTC
There are only 'skip'ped commits left to test.
The first bad commit could be any of:
229a1a7e4da1a9c60b35b79f2a63e0bab451a76e
70f0eda12723e19147c07740a4b7fcb91a3076d4
We cannot bisect more!
bisect run cannot continue any more
Comment 2 Michel Dänzer 2012-07-19 06:09:56 UTC
> Mesa warning: failed to remap index 173

FWIW, that kind of message is usually a sign of an inconsistent build.
Comment 3 Olivier Galibert 2012-07-19 09:18:04 UTC
(In reply to comment #2)
> > Mesa warning: failed to remap index 173
> 
> FWIW, that kind of message is usually a sign of an inconsistent build.

The bug is perfectly real though.  I'll send to fix as soon as I can connect my laptop to the network (the work wifi went pear shaped for some reason).

  OG.
Comment 4 Brian Paul 2012-07-19 19:26:26 UTC
Should be fixed with commit fbe3fa74e5cdaf02f3738da7d6052e1f1fd7bbf2


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.